--- a/electronapp/index.html
+++ b/electronapp/index.html
@@ -6,7 +6,7 @@
     <link rel="Stylesheet" href="./node_modules/xterm/lib/xterm.css">
   </head>
   <body>
-    <div id="xterm"></div>
+    <div style="padding: 50px"id="xterm"></div>
   </body>
   <script>
     require('./renderer.js')
