--- a/electronapp/indexTerminal.html
+++ b/electronapp/indexTerminal.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>node-pty Electron example</title>
+    <title>Terminal</title>
     <link rel="Stylesheet" href="./node_modules/xterm/lib/xterm.css">
   </head>
   <body>
