--- a/electron-app/public/terminal.html
+++ b/electron-app/public/terminal.html
@@ -9,6 +9,6 @@
     <div style="padding: 50px"id="xterm"></div>
   </body>
   <script>
-    require('./renderer.js');
+    require('../src/renderer.js');
   </script>
 </html>
