delete cra electron and overhaul previous version of electron

--- a/electronapp/public/indexTerminal.html
+++ b/electronapp/public/indexTerminal.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Terminal</title>
-    <link rel="Stylesheet" href="./node_modules/xterm/lib/xterm.css">
+    <title>node-pty Electron example</title>
+    <link rel="Stylesheet" href="../node_modules/xterm/lib/xterm.css">
   </head>
   <body>
     <div style="padding: 50px"id="xterm"></div>
   </body>
   <script>
-    require('../src/renderer.js');
+    require('../renderer.js');
   </script>
 </html>
