minor presentational changes

--- a/electronapp/public/indexTerminal.html
+++ b/electronapp/public/indexTerminal.html
@@ -6,7 +6,7 @@
     <link rel="Stylesheet" href="../node_modules/xterm/lib/xterm.css">
   </head>
   <body>
-    <div style="padding: 50px"id="xterm"></div>
+    <div id="xterm"></div>
   </body>
   <script>
     require('../renderer.js');
