--- a/electronapp/public/indexTerminal.html
+++ b/electronapp/public/indexTerminal.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>node-pty Electron example</title>
+    <title>Terminal</title>
+    <link rel="stylesheet" href="../styles/css/index.css">
     <link rel="Stylesheet" href="../node_modules/xterm/lib/xterm.css">
   </head>
   <body>
